- Implemented: Counters in P1 Electra/Gas month reports per day
- Implemented: MySensors, V_RAIN
- Implemented: MySensors, V_WIND/V_GUST/V_DIRECTION
- Fixed: Blockly, possible saving of 'ghost' events
- Implemented: Sanity check for OpenZWave NetworkKey Length
- Implemented: OTGW, MsgID=14 and MsgID=17 (if reported)
- Implemented: KMTronic USB/WEB relay hardware

Version 2.0.2284 (February 22th 2015)
- Fixed: Firefox, RGBW/Setpoint popup

Version 2.0.2283 (February 21th 2015)
- Implemented: Icon scaling setting per floorplan
- Updated: floorplan code to handle non-landscape images better
- Fixed: Possible crash in Eventsystem (GetCurrentMeasurementStates) where string value was empty
- Implemented: Manual add Blinds T6 type (DC106, YOOHA, Rohrmotor24 RMF)
- Fixed: Pushover notification setup in settings (could contain invalid characters)
- Fixed: OpenZWave, converted home_id to correct variable
- Fixed: Blinds1, T6 DC160 should work now
- Implemented: Dewpoint devices in Blockly
- Updated: floorplan interface, German translation
- Fixed: Setting default security network key for openzwave
- Implemented: Devices tab, CM180 log option
- Implemented: Logging counter values for P1 meter (not displayed yet)
- Implemented: SBFSpot compatible now
- Implemented: Trend Lines in various charts
- Fixed: Openzwave/zwave.me issues with large home_id
- Implemented: Logging when a script is executed
- Implemented: OpenZWave Node Queried status, last seen in Node table
- Implemented: Native Mochad hardware support (thanks to kaashoek)
- Fixed: lua/blockly energy device value
- Fixed: lua 'UpdateDevice' now reloads current states
- Implemented: Blockly/Lua Thermostat/Setpoint utility device
- Changed: Scene/Group now takes switch On-Delay into account
- Fixed: OpenZWave Node configuration parameters with special characters
- Changed: lua 'UpdateDevice' now updates internal state instead of reloading all states
- Implemented: Support for device-type Usage/Electric in Blockly/Lua