@@ -146,6 +146,7 @@ private:
 	void Cmd_RegisterWithPhilipsHue(Json::Value &root);
 	void Cmd_GetCustomIconSet(Json::Value &root);
 	void Cmd_DeleteCustomIcon(Json::Value &root);
+	void Cmd_RenameDevice(Json::Value &root);
 
 	//RTypes
 	void RType_HandleGraph(Json::Value &root);
