@@ -8,6 +8,16 @@
 		</table>
     </form>
 </div>
+<div id="dialog-renamedevice" title="Rename Device">
+    <form>
+		<table border="0" cellpadding="0" cellspacing="4">
+		<tr>
+			<td align="right" style="width:80px"><label for="devicename"><span data-i18n="Name"></span>:</label></td>
+			<td><input type="text" id="devicename" style="width: 250px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
+		</tr>
+		</table>
+    </form>
+</div>
 <div id="dialog-addlightdevicedev" title="Add Light/Switch Device">
     <form>
         <table class="display" id="lighttable" border="0" cellpadding="0" cellspacing="0">
@@ -59,7 +69,7 @@
 								<th data-i18n="Data">Data</th>
 								<th width="30"><img src="images/air_signal.png" data-i18n="[title]RF Signal Level"></img></th>
 								<th width="30"><img src="images/battery.png" data-i18n="[title]Battery Level"></img></th>
-								<th width="88"></th>
+								<th width="110"></th>
 								<th width="160" align="left" data-i18n="Last Seen">Last Seen</th>
 						</tr>
 				</thead>
